自定义流式标签

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -72,5 +72,6 @@
 
     <string name="loading_waiting">加載中，请稍后...</string>
     <string name="EvenBusActivity">AndroidEvenBus</string>
+    <string name="FlowLayoutActivity">流式标签</string>
 
 </resources>
