--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -73,5 +73,6 @@
     <string name="loading_waiting">加載中，请稍后...</string>
     <string name="EvenBusActivity">AndroidEvenBus</string>
     <string name="FlowLayoutActivity">流式标签</string>
+    <string name="CustomViewActivity">自定义View/混合模式</string>
 
 </resources>
